--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -32,6 +32,7 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
+    "@ensdomains/eth-ens-namehash": "^2.0.15",
     "@ethersproject/abi": "^5.0.0",
     "@ethersproject/address": "^5.0.0",
     "@ethersproject/bignumber": "^5.0.0",
@@ -53,14 +54,13 @@
     "@pancakeswap/smart-router": "*",
     "@pancakeswap/token-lists": "*",
     "@pancakeswap/tokens": "*",
-    "@pancakeswap/uikit": "*",
     "@pancakeswap/ui-wallets": "*",
+    "@pancakeswap/uikit": "*",
     "@pancakeswap/utils": "*",
     "@pancakeswap/wagmi": "*",
     "@reduxjs/toolkit": "^1.9.1",
-    "@ensdomains/eth-ens-namehash": "^2.0.15",
-    "js-sha3": "^0.8.0",
     "@snapshot-labs/snapshot.js": "^0.4.40",
+    "@tanstack/react-query": "^4.29.5",
     "@vanilla-extract/next-plugin": "^2.1.1",
     "ajv": "^6.12.3",
     "bignumber.js": "^9.0.0",
@@ -76,15 +76,16 @@
     "graphql-request": "^5.0.0",
     "jotai": "^2.0.3",
     "js-cookie": "^3.0.1",
+    "js-sha3": "^0.8.0",
     "lightweight-charts": "^3.8.0",
     "local-storage": "^2.0.0",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "next": "13.0.7",
+    "next-seo": "^6.0.0",
     "next-themes": "^0.2.0",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
-    "next-seo": "^6.0.0",
     "react-countup": "^6.4.0",
     "react-datepicker": "^4.8.0",
     "react-device-detect": "^2.1.2",
