🐛 fix bug,change swap,lp token

--- a/apps/web/.env.production
+++ b/apps/web/.env.production
@@ -2,4 +2,4 @@ NEXT_PUBLIC_GTAG = "GTM-TLF66T4"
 
 NEXT_PUBLIC_SNAPSHOT_BASE_URL = "https://hub.snapshot.org"
 
-NEXT_PUBLIC_MININGPOOL_BASE_URL = "https://api.smartswap.pro/"
+NEXT_PUBLIC_MININGPOOL_BASE_URL = "https://api.smartswap.pro"
