--- a/apps/web/.env.development
+++ b/apps/web/.env.development
@@ -3,4 +3,4 @@ NEXT_PUBLIC_GTAG = "GTM-PXLD3XW"
 
 NEXT_PUBLIC_SNAPSHOT_BASE_URL = "https://testnet.snapshot.org"
 
-NEXT_PUBLIC_MININGPOOL_BASE_URL = "https://api.smartswap.pro/"
+NEXT_PUBLIC_MININGPOOL_BASE_URL = "https://api.smartswap.pro"
